# swimlane-cli

./: Cargo.toml  readme.md
.github/workflows/: ci.yml  deploy-docs.yml  release.yml  swimlane-cli.yml  tag.yml
crates/swimlane/: Cargo.toml
crates/swimlane-cli/: Cargo.toml
crates/swimlane-cli/src/: error.rs  main.rs  util.rs
crates/swimlane-cli/src/cmd/: commands.rs  mod.rs  task.rs
crates/swimlane-cli/src/cmd/migrate/: mod.rs
crates/swimlane-migrator/: Cargo.toml
crates/swimlane-migrator/src/: adapt.rs  apps.rs  equality.rs  groups.rs  lib.rs  roles.rs  users.rs  util.rs  workspaces.rs
crates/swimlane/src/: apps.rs  error.rs  groups.rs  lib.rs  python.rs  roles.rs  tasks.rs  users.rs  util.rs  workflows.rs  workspaces.rs
crates/swimlane/src/apps/: mod.rs
crates/swimlane/src/apps/fields/: constants.rs  datetime.rs  input_types.rs  mod.rs  numeric.rs  reference.rs  selection.rs  text.rs  users_groups.rs  util.rs
crates/swimlane/src/apps/json/: saim.json
crates/swimlane/src/apps/layout/: constants.rs  mod.rs  util.rs
crates/swimlane/src/apps/layout/json/: section.json
docs/: README.md  astro.config.mjs  package.json  pnpm-lock.yaml
docs/src/content/docs/: index.mdx
docs/src/content/docs/commands/: download-python-tasks.md  index.md  migrate.md  pip.md  task.md
docs/src/content/docs/commands/migrate/: app.md  apps.md  group.md  groups.md  index.md  role.md  roles.md  user.md  users.md
docs/src/content/docs/commands/pip/: freeze.md  install.md
docs/src/content/docs/commands/task/: save.md
docs/src/content/docs/guides/: example.md
src/: main.rs
src/swimlane/: mod.rs
