[package]
name = "swimlane-cli"
version = "0.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
reqwest = { version = "0.11.14", features = ["json"] }
tokio = { version = "1", features = ["full"] }
url = "2.3.1"
serde = { version = "1.0", features = ["derive"] }
