[package]
name = "swimlane-cli"
version = "0.0.3"
edition = "2021"

[dependencies]
clap = { version = "4.1.13", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
swimlane = { path = "../swimlane" }
swimlane-migrator = { path = "../swimlane-migrator" }
thiserror = "1.0"
colored = "2"
