[package]
name = "swimlane"
version = "0.0.3"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.14", features = ["json"] }
tokio = { version = "1", features = ["full"] }
url = "2.3.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
chrono = { version = "0.4.24", features = ["serde"] }

[dev-dependencies]
tempfile = "3.4.0"
