[package]
name = "swimlane"
version = "0.0.3"
edition = "2021"
exclude = ["**/tests/**", "**/json/**"]

[dependencies]
reqwest = { version = "0.11.14", features = ["json"] }
tokio = { version = "1.27.0" }
url = "2.3.1"
serde = { version = "1.0.159", features = ["derive"] }
thiserror = "1.0.40"
chrono = { version = "0.4.24", features = ["serde"] }
serde_json = "1.0.95"

[dev-dependencies]
tempfile = "3.4.0"
httpmock = "0.6"
